infrastructure/configs/envoy-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  namespace: envoy-gateway-system
spec:
  addresses:
  - type: IPAddress
    value: 192.168.178.42
  - type: IPAddress
    value: 192.168.178.41
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-proxy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.arpa"
      tls:
        certificateRefs:
          - name: local-ca-secret
            namespace: cert-manager
            kind: Secret
            group: ""
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: ReferenceGrant
metadata:
  name: envoy-gateway-local-ca-access
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Secret
      name: local-ca-secret
